--- a/coursesSystem/appsettings.json
+++ b/coursesSystem/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "DefaultConnection": "Server=.;Database=CourseSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true;trust Certificat conntection "
-}
+    "DefaultConnection": "Server=.;Database=CourseSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
