--- a/coursesSystem/package.json
+++ b/coursesSystem/package.json
@@ -1,33 +1,19 @@
 {
-  "name": "coursessystem",
+  "name": "courses-system",
   "version": "1.0.0",
-  "description": "",
+  "description": "ASP.NET Core Courses System project with Tailwind CSS",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
+  "scripts": {
+    "build:css": "tailwindcss -i ./wwwroot/css/tailwind.css -o ./wwwroot/css/site.css",
+    "watch:css": "tailwindcss -i ./wwwroot/css/tailwind.css -o ./wwwroot/css/site.css --watch"
+  },
+  "keywords": ["tailwindcss", "aspnetcore", "courses-system"],
+  "author": "Mostafa",
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14"
-  },
-  "dependencies": {
-    "baseline-browser-mapping": "^2.8.12",
-    "browserslist": "^4.26.3",
-    "caniuse-lite": "^1.0.30001748",
-    "electron-to-chromium": "^1.5.230",
-    "escalade": "^3.2.0",
-    "fraction.js": "^4.3.7",
-    "nanoid": "^3.3.11",
-    "node-releases": "^2.0.23",
-    "normalize-range": "^0.1.2",
-    "picocolors": "^1.1.1",
-    "postcss-value-parser": "^4.2.0",
-    "source-map-js": "^1.2.1",
-    "update-browserslist-db": "^1.1.3"
   }
 }
